--- a/app.json
+++ b/app.json
@@ -2,6 +2,6 @@
   "name": "RescueBoard",
   "description": "A Statusboard widget for your RescueTime data",
   "repository": "https://github.com/dombarnes/rescueboard",
-  "success_url": "/latest",
+  "success_url": "/",
   "keywords": ["rescuetime", "panic", "statusboard", "sinatra"]
 }
